# bazel-swc-es6

./: BUILD.bazel  README.md  main.ts  package-lock.json  package.json
